--- a/README
+++ b/README
@@ -24,7 +24,7 @@ Reinforcement Learning applied to the Snake Game
 ================================================
 
 Directory Structure:
-  * rl_agents - consists of rl-agents
+  * agents - consists of rl-agents
   * state_mappers - consists of state-mappers
   * snake_game - consists of logic required for the snake game
 
